<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/sbSearchBar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8sp"
            app:mt_hint="@string/search_bar_hint"
            app:mt_maxSuggestionsCount="10"
            app:mt_speechMode="true">


        </com.mancj.materialsearchbar.MaterialSearchBar>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tblTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        app:tabIndicatorColor="?attr/colorBackgroundFloating"
        app:tabSelectedTextColor="@android:color/background_light"
        app:tabTextColor="?android:attr/colorButtonNormal">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_today" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_tomorrow" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_ten_days" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>