<?xml version="1.0" encoding="utf-8"?>
<com.baoyz.widget.PullRefreshLayout
    android:id="@+id/parent_layout_tomorrow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_top_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp">

                    <RadioGroup
                        android:id="@+id/radio_top_tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_date_tomorrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="6月8日, 星期六"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_weather_overview_tomorrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="W多雲時陰"
                            android:textColor="@color/colorBlack"
                            android:textSize="25sp" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imageView_tomorrow"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10sp"
                        android:layout_marginTop="10sp"
                        app:srcCompat="@drawable/sunny_day" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15sp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_temperature_tomorrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="15sp"
                        android:foregroundGravity="center_horizontal"
                        android:scrollbars="horizontal" />

                    <TextView
                        android:id="@+id/txvDescription_Tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/recycler_view_temperature_tomorrow"
                        android:layout_marginBottom="15sp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15sp"
                        android:text="W今晚降雨/降雪機率偏低(30%)"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="3sp"
                android:background="@color/colorBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/data_detail"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_humidity"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_wind_speed"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_dew_point"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_humidity_tomorrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="87%"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_wind_speed_tomorrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_dew_point_tomorrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="30"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</com.baoyz.widget.PullRefreshLayout>